    + Ignore a repository owner mismatch in "print mode"
  * dget: Pass --all-versions to apt-cache show in case the user has
    configured it to only show the candidate version. Thanks Håkon Stordahl
    (Closes: #472747)
  * dscverify:
    + Add debian-maintainers to the default set of keyrings
    + Add a --no-default-keyrings option to override the default keyrings
  * who-uploads: Mention the debian-maintainers keyring in --help

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 25 Mar 2008 18:51:59 +0000

devscripts (2.10.20) unstable; urgency=low

  * bts:
    + Only append a single ellipsis to the mail subject once it becomes
      too long, rather than for each extra command (Closes: #471304)
    + Make --no-action and --(force-)interactive work if neither DEBEMAIL
      nor EMAIL are set (Closes: #467066)
    + Add --cc-addr to --help output
  * checkbashisms:
    + Make --version actually produce version information
    + Fix explanation of VAR+=foo
    + Fix an error in the "shell script wrapper" detection
    + Enhance the "invalid function name" check to allow a leading bracket
      before the function name
    + Don't treat '' at the beginning of a line as the start of a quoted block
    + Allow a heredoc marker to begin with a backslash
    + Enhance quoted block detection to handle escaped quotes better
    + Enhance "shell script wrapper" detection to catch more ways of
      disguising a non shell script as one
    + If more than one issue was found within a single line, output each
      rather than just the first
  * dcmd: New script from Romain Francoise to run a given command replacing
    the name of a .changes or .dsc file with each of the files referenced
    therein (Closes: #472492)
  * debcheckout: Allow specific files from the repository to be retrieved
    rather than checking out the repository (Closes: #469242)
  * debcommit:
    + Make the change to --release's behaviour introduced in the last